# octopeek

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  clippy.toml  deny.toml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml  security.yml
src/: actions_util.rs  cast.rs  config.rs  event.rs  git.rs  main.rs  state.rs  theme.rs
src/app/: action_handlers.rs  actions.rs  fetch.rs  keymap.rs  mod.rs  mouse.rs  run.rs  state.rs  tests.rs  types.rs
src/github/: auth.rs  cache.rs  client.rs  detail.rs  flags.rs  mod.rs  mutations.rs  query.rs  types.rs
src/ui/: comment_composer.rs  confirm.rs  copy_mode.rs  dashboard.rs  diff.rs  first_run.rs  glyphs.rs  help.rs  issue_detail.rs  markdown.rs  mod.rs  pr_detail.rs  repo_picker.rs  status_bar.rs  tab_bar.rs  tabs.rs  theme_picker.rs  util.rs
src/ui/pr_detail/: checks.rs  comments.rs  commits.rs  files.rs  header.rs  mod.rs  reviews.rs  sections.rs  tests.rs  thread_card.rs  thread_index.rs
