[package]
name = "octopeek"
version = "0.3.0"
edition = "2024"
rust-version = "1.88"
authors = ["Luis Eduardo Boiko <luiseduardo.boiko@gmail.com>"]
description = "A fast, keyboard-driven TUI for your GitHub PR and issue inbox."
license = "MIT OR Apache-2.0"
repository = "https://github.com/leboiko/octopeek"
homepage = "https://github.com/leboiko/octopeek"
documentation = "https://docs.rs/octopeek"
readme = "README.md"
keywords = ["tui", "github", "pull-request", "cli", "terminal"]
categories = ["command-line-utilities", "development-tools"]

# Keep the published tarball lean: non-runtime project-hygiene files don't
# need to ship to users running `cargo install octopeek`.
exclude = [
    ".github/*",
    "docs/*",
    "rust-toolchain.toml",
    "CODE_OF_CONDUCT.md",
    "SECURITY.md",
    ".gitignore",
    "deny.toml",
]

[dependencies]
anyhow = "1.0.102"
arboard = "3.6.1"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
dirs = "6.0.0"
open = "5.3.3"
pulldown-cmark = "0.13.3"
# `unstable-rendered-line-info` exposes `Paragraph::line_count(width)`, the
# only API that returns wrapped-row counts. Needed by the PR detail scroll
# clamp so the user can always scroll the last line into view, regardless of
# how aggressively the body wraps. Tracked upstream at
# https://github.com/ratatui/ratatui/issues/293 — the underlying behaviour is
# stable; only the exact function signature is subject to change.
ratatui = { version = "0.30.0", features = ["unstable-rendered-line-info"] }
# Phase 2 GitHub GraphQL client; `rustls` keeps the build OpenSSL-free.
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }
unicode-width = "0.2.2"

# Phase 4 dependencies (arboard, pulldown-cmark, syntect, open) are now wired
# above. supports-color (NO_COLOR / capability detection) is deferred to a
# later phase if needed.

[dev-dependencies]
# Test-only: tempfile directories so `Config::save` / `AppSession::save` never
# touch the user's real filesystem during `cargo test`.
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
missing_errors_doc = "allow"

[profile.release]
lto = "thin"
strip = "symbols"
codegen-units = 1

[profile.dist]
inherits = "release"
lto = "fat"
